Added basic test for the calculation.