@@ -2,6 +2,7 @@ package de.spillner.sales.data;
 
 import java.math.BigDecimal;
 import java.util.Collection;
+import java.util.stream.Collectors;
 
 /**
  * A receipt is just a wrapper for invoice positions and the gross total + tax.
@@ -10,18 +11,21 @@ import java.util.Collection;
  */
 public record Receipt(Collection<InvoicePosition> positions, BigDecimal grossTotal, BigDecimal totalTax)
 {
+  private static final String ORDER_TEMPLATE =
+      """
+          %s
+          Sales Taxes: %.2f
+          Total: %.2f
+          """;
+
   private static final String POSITION_FORMAT = "%d %s %.2f";
 
   @Override
   public String toString()
   {
-    var sb = new StringBuilder();
-    positions().stream()
+    String positions = positions().stream()
         .map( ip -> POSITION_FORMAT.formatted( ip.amount().amount(), ip.name(), ip.total() ) )
-        .forEach( sb::append );
-    sb.append( "Sales Taxes: %.2f\n".formatted( totalTax() ) )
-        .append( "Total: %.2f".formatted( grossTotal() ) );
-
-    return sb.toString();
+        .collect( Collectors.joining( "\n" ) );
+    return String.format( ORDER_TEMPLATE, positions, totalTax, grossTotal );
   }
 }
